fixed about us team spacing

--- a/src/Pages/AboutUs/Aboutus.css
+++ b/src/Pages/AboutUs/Aboutus.css
@@ -77,20 +77,24 @@
 }
 
 .card-container {
+  max-width: 80vw;
+
   display: flex;
   flex-wrap: wrap;
-  color: #393939;
-  font-size: large;
   justify-content: center;
+
   font-family: "Red Hat Display", sans-serif;
+  font-size: large;
+  color: #393939;
 }
 
 .memberCard {
+  min-width: 150px;
+  margin: 1rem;
+
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .profile-pic {
@@ -258,13 +262,14 @@
   text-align: center;
 }
 
-.company-container{
+.company-container {
   display: flex;
   flex-direction: row;
   margin-top: 30px;
 }
 
-.company1 > img, .company2 > img{
+.company1 > img,
+.company2 > img {
   min-width: 250px;
 }
 
@@ -290,7 +295,6 @@
   letter-spacing: 1px;
   min-height: 144px;
   text-align: center;
-
 }
 
 .paragraphs-3 {
